Use llvm-config to avoid absolute path to OCaml LLVM binding

--- a/minml/build
+++ b/minml/build
@@ -2,6 +2,8 @@
 
 # Jon's build instructions:
 
+#-I /Users/steshaw/.shelly/apps/llvm-3.0/lib/ocaml
+
 # $ ocamlc -g -dtypes -pp camlp4oof -I +camlp4 dynlink.cma camlp4lib.cma -cc g++ llvm.cma llvm_bitwriter.cma minml.ml -o minml
 # $ ./minml run.bc <fib.ml
 # $ llc -f run.bc -o run.s
@@ -11,4 +13,4 @@
 
 # Doesn't work with ocaml 3.11.2 ... doesn't have camlp4oof. 
 # Tried camlp4o and camlp4r but no luck.
-ocamlc -g -dtypes -pp camlp4o -I +camp4 dynlink.cma camlp4lib.cma -cc g++ llvm.cma llvm_bitwriter.cma minml.ml -o minml
+ocamlc -g -dtypes -pp camlp4oof -I +camlp4 dynlink.cma camlp4lib.cma -cc g++ llvm.cma llvm_bitwriter.cma minml.ml -o minml
